# Python-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  dev_requirements.txt  pyproject.toml  requirements.txt
